--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,7 +4,7 @@ driver:
     cpus: 2
     memory: 2048
   synced_folders:
-    - ['.', '/home/vagrant/test']
+    - ['.', '/home/vagrant/eir']
 
 provisioner:
   require_chef_omnibus: 11.8.0
@@ -18,5 +18,5 @@ suites:
     attributes:
       omnibus:
         build_user:  vagrant
-        build_dir:   /home/vagrant/test
-        install_dir: /opt/test
+        build_dir:   /home/vagrant/eir
+        install_dir: /opt/eir
